added max retries and using virtualThread in the client side also